--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hu.bme.f1calendar.f1calendarflutter">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="f1calendarflutter"
         android:name="${applicationName}"
