--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,16 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+  # add this line to your dependencies
+  fluttertoast: ^8.0.9
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - lib/assets/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
